Link added in readme and live in codepen.io

--- a/Tibute_page/page.html
+++ b/Tibute_page/page.html
@@ -16,7 +16,7 @@
             <h3>The First Campaigner For The Unification of Nepal.</h3>
         </div>
         <div id="img-div">
-            <img id="image" src="image/Prithvi_Narayan_Shah.jpg" alt="pics of Prithvi Narayan Shah ">
+            <img id="image" src="https://upload.wikimedia.org/wikipedia/commons/9/99/Prithvi_Narayan_Shah.jpg" alt="pics of Prithvi Narayan Shah ">
             <h4 id="img-caption">"This is not the nation gained by my trifle efforts, this is the garden of all kinds of flowers, and may all be aware of this." - King Prithivi Narayan Shah (1723–1775)
             </h4>
         </div>
