--- a/Survey_Form/index.html
+++ b/Survey_Form/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Online Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 
 </head>
 
@@ -18,7 +18,7 @@
 
 
         <div class="form-container">
-            <h3>* indicates a required field.</h3>
+            <h3> *indicates a required field.</h3>
             <form id="survey-form" action="#">
                 <fieldset>
                     <legend>Personal information:</legend>
