--- a/Product_Landing_Page/product.html
+++ b/Product_Landing_Page/product.html
@@ -29,9 +29,10 @@
         <div class="service-container">
             <div class="service-item">
                 <nav>
-                    <h2>Graphics & media</h2>
+                    GRAPHICS & MEDIA
                 </nav>
                 <ul>
+                    <li>$450</li>
                     <li>Branding and logos</li>
                     <li>Image editing and video editing</li>
                     <li> Layout and package design</li>
@@ -41,9 +42,10 @@
             </div>
             <div class="service-item">
                 <nav>
-                    <h3>WEB DEVELOPMENT & CONTENT MANAGEMENT</h3>
+                    WEB DEVELOPMENT & CONTENT MANAGEMENT
                 </nav>
                 <ul>
+                    <li>$750</li>
                     <li>Website building</li>
                     <li>Application development</li>
                     <li>Web maintenance and security</li>
@@ -55,9 +57,10 @@
 
             <div class="service-item">
                 <nav>
-                    <h3>ONLINE MARKETING AND SALES</h3>
+                    ONLINE MARKETING AND SALES
                 </nav>
                 <ul>
+                    <li>$1150</li>
                     <li>Email and web marketing</li>
                     <li>Social media marketing</li>
                     <li>Content development</li>
@@ -70,6 +73,14 @@
         </div>
 
     </div>
+    <footer>
+        <div class="footer-container">
+            <div class="privacy">Privacy</div>
+            <div class="terms">Terms</div>
+            <div class="contact">Contact</div>
+        </div>
+        <h4>Copyright 2019, unknown Media</h4>
+    </footer>
 </body>
 
 </html>
