--- a/Product_Landing_Page/product.html
+++ b/Product_Landing_Page/product.html
@@ -21,7 +21,11 @@
             </nav>
         </div>
     </div>
-    <div id="home"></div>
+    <!--Home-->
+    <div id="home">
+        <iframe id="video" src="https://www.youtube.com/embed/bmixiVwtDso?start=0&end=98&version=3" frameborder="0"></iframe>
+    </div>
+    <!--Services-->
     <div id="service">
         <div class="service-header">
             <h1>Our Services</h1>
@@ -32,12 +36,12 @@
                     GRAPHICS & MEDIA
                 </nav>
                 <ul>
-                    <li>$450</li>
+                    <li><b>$450</b></li>
                     <li>Branding and logos</li>
                     <li>Image editing and video editing</li>
                     <li> Layout and package design</li>
                 </ul>
-                <div class="select">select</div>
+                <button class="select">Select</button>
 
             </div>
             <div class="service-item">
@@ -45,14 +49,13 @@
                     WEB DEVELOPMENT & CONTENT MANAGEMENT
                 </nav>
                 <ul>
-                    <li>$750</li>
+                    <li><b>$750</b></li>
                     <li>Website building</li>
                     <li>Application development</li>
                     <li>Web maintenance and security</li>
 
                 </ul>
-                <div class="select">select</div>
-
+                <button class="select">Select</button>
             </div>
 
             <div class="service-item">
@@ -60,17 +63,30 @@
                     ONLINE MARKETING AND SALES
                 </nav>
                 <ul>
-                    <li>$1150</li>
+                    <li><b>$1150</b></li>
                     <li>Email and web marketing</li>
                     <li>Social media marketing</li>
                     <li>Content development</li>
                 </ul>
-                <div class="select">select</div>
-
+                <button class="select">Select</button>
             </div>
-
-
         </div>
+    </div>
+    <!--About-->
+    <div id="about"></div>
+    <!--Contact-->
+    <div id="contact">
+        <form action="/action_page.php">
+            <fieldset>
+                <legend>Personal information:</legend>
+                First name:<br>
+                <input type="text" name="firstname" value="Mickey">
+                <br> Last name:<br>
+                <input type="text" name="lastname" value="Mouse">
+                <br><br>
+                <input type="submit" value="Submit">
+            </fieldset>
+        </form>
 
     </div>
     <footer>
