header added with flex

--- a/Flex/main.html
+++ b/Flex/main.html
@@ -10,6 +10,12 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="header-item">Home</div>
+        <div class="header-item">Browse</div>
+        <div class="header-item">View</div>
+        <div class="header-item">Update</div>
+    </div>
 
 </body>
 
