added side bar and footer

--- a/Flex/main.html
+++ b/Flex/main.html
@@ -10,12 +10,49 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-item">Home</div>
-        <div class="header-item">Browse</div>
-        <div class="header-item">View</div>
-        <div class="header-item">Update</div>
+    <header>
+        <div class="header">
+            <div class="header-item">Home</div>
+            <div class="header-item">Browse</div>
+            <div class="header-item">View</div>
+            <div class="header-item">Update</div>
+        </div>
+    </header>
+    <div class="main-container">
+        <div id="sidebar">
+            <div class="sidebar-item"><a href="#html">HTML</a></div>
+            <div class="sidebar-item"><a href="#">JS</a></div>
+            <div class="sidebar-item"><a href="#">Python</a></div>
+            <div class="sidebar-item"><a href="#">Java</a></div>
+            <div class="sidebar-item"><a href="#">CSS</a></div>
+            <div class="sidebar-item"><a href="#">C/C++</a></div>
+            <div class="sidebar-item"><a href="#">HTML</a></div>
+            <div class="sidebar-item"><a href="#">JS</a></div>
+            <div class="sidebar-item"><a href="#">Python</a></div>
+            <div class="sidebar-item"><a href="#">Java</a></div>
+            <div class="sidebar-item"><a href="#">CSS</a></div>
+            <div class="sidebar-item"><a href="#">C/C++</a></div>
+           
+            
+        </div>
+        <div class="contents">
+            <div id="html">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, atque blanditiis. Ipsa
+                earum vel consequatur maiores culpa velit. Tempora rem vel reiciendis, quibusdam deleniti iusto modi
+                corporis quo voluptatibus nisi?</div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum, pariatur. Illo consectetur corporis
+                quasi eius cumque iste perspiciatis commodi voluptatem ipsa ex, eveniet natus incidunt. Quam impedit
+                tempore sed autem.</p>
+        </div>
+
+
     </div>
+    <footer class="footer">
+        <div class="footer-item">Home</div>
+        <div class="footer-item">g</div>
+        <div class="footer-item">f</div>
+        <div class="footer-item">k</div>
+    </footer>
+
 
 </body>
 
