--- a/Flex/main.html
+++ b/Flex/main.html
@@ -46,6 +46,7 @@
 
 
     </div>
+    <!--TODO remove the margin-->
     <footer class="footer">
         <div class="footer-item">Home</div>
         <div class="footer-item">g</div>
