overflow made hidden right side and auto in navbar

--- a/Tech_Doc_page/main.html
+++ b/Tech_Doc_page/main.html
@@ -10,13 +10,38 @@
 </head>
 
 <body>
+
+    <nav id="navbar">
+        <header class="nav-header">Algorithm Notes</header>
+        <a href="#intro" class="nav-link">Introduction</a>
+        <a href="#design_algorithm" class="nav-link">How to Design Algorithms.</a>
+        <a href="#algo_analysis" class="nav-link">Algorithm Analysis</a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+        <a href="" class="nav-link"></a>
+    </nav>
+
     <!-- main section contains the page's main content (technical documentation).-->
     <main id="main-doc">
 
         <!-- Intro Section-->
         <section class="main-section">
             <!-- header element which contains text that describes the topic of that section-->
-            <header id="javascript" class="js"> Introduction </header>
+            <header id="intro" class="js"> Introduction </header>
             <div class="contents">
                 <p></p>
                 <p></p>
