fixed problem of side bar by remove flex from body

--- a/Tech_Doc_page/main.html
+++ b/Tech_Doc_page/main.html
@@ -13,26 +13,26 @@
 
     <nav id="navbar">
         <header class="nav-header">Algorithm Notes</header>
-        <a href="#intro" class="nav-link">Introduction</a>
-        <a href="#design_algorithm" class="nav-link">How to Design Algorithms.</a>
-        <a href="#algo_analysis" class="nav-link">Algorithm Analysis</a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
-        <a href="" class="nav-link"></a>
+        <div class="nav-div">
+            <a href="#intro" class="nav-link">Introduction</a>
+            <a href="#design_algorithm" class="nav-link">How to Design Algorithms.</a>
+            <a href="#algo_analysis" class="nav-link">Algorithm Analysis</a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+            <a href="" class="nav-link"></a>
+
+        </div>
+
     </nav>
 
     <!-- main section contains the page's main content (technical documentation).-->
@@ -43,16 +43,36 @@
             <!-- header element which contains text that describes the topic of that section-->
             <header id="intro" class="js"> Introduction </header>
             <div class="contents">
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, ratione. Repellat dolore est
+                    a saepe ullam. Minima corporis culpa alias rem! Qui dicta ad beatae veniam eum, aspernatur totam
+                    laborum.</p>
+                <p>Adipisci nihil architecto sunt veniam, earum non ea sint illo voluptates! Quam reprehenderit tenetur
+                    aut et ut voluptas quasi facilis expedita voluptate ab perferendis eius dicta quae vero, cum labore.
+                </p>
+                <p>Voluptatum magni voluptatibus sed aliquam culpa, quas labore itaque quaerat debitis, perspiciatis
+                    voluptates illum nostrum consequatur? Ex, quidem reprehenderit, praesentium hic quos quia, vitae
+                    dignissimos suscipit autem voluptate sit a?</p>
+                <p>Non in, praesentium debitis illum numquam molestiae eligendi eum eveniet cum quidem ex voluptatem
+                    odio omnis deserunt obcaecati quaerat, iusto sunt! Aperiam impedit et ipsa earum praesentium
+                    mollitia unde illo.</p>
+                <p>Nam, voluptatem velit. Quidem reiciendis enim exercitationem non accusantium error, libero sunt
+                    assumenda omnis cupiditate, soluta ratione nostrum doloremque dolorem voluptatibus magni aliquid
+                    tempore similique sapiente modi quos laborum? Molestias.</p>
+                <p>Suscipit rerum eligendi magnam ut quia nihil voluptatem dolores quam, molestiae velit, mollitia
+                    recusandae atque eos ratione animi quae? Dolor officiis, nostrum fugiat repellat earum dolorem sint
+                    praesentium labore nesciunt!</p>
+                <p>Ipsa adipisci vel, facilis iste minima temporibus rem incidunt reiciendis odit. Rerum maxime iste
+                    pariatur recusandae veniam, fugiat ipsam corrupti vitae molestias eius sapiente modi cum fuga,
+                    inventore eaque quo!</p>
+                <p>Quo exercitationem illum omnis, dolorum, autem libero cumque repellendus ut dolor facere inventore
+                    quos voluptatum consequuntur ducimus iusto magni natus totam nesciunt et perspiciatis molestiae,
+                    quia cum vel non. Nam?</p>
+                <p>Totam, sint blanditiis unde alias, autem quod iste quos sunt aliquam nostrum dolore in veritatis
+                    placeat itaque voluptatibus reprehenderit nobis ex iusto et. Deleniti modi placeat maiores nam
+                    doloremque reiciendis?</p>
+                <p>Voluptatum est aliquid repellendus nemo accusantium consectetur. Corporis voluptatem accusantium
+                    fugiat, non sint beatae aliquid odit voluptatum dolores dolore repudiandae iusto totam pariatur aut
+                    quo eos nulla, iste magni. Dolorum?</p>
             </div>
         </section>
 
@@ -123,21 +143,93 @@
                 <p></p>
             </div>
         </section>
-        
+
         <!-- Graph Traversal-->
-        <section class="main-section"></section>
+        <section class="main-section">
+            <header id="Graph_traversal" class="">Graph Traversal</header>
+            <div class="contents">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </section>
 
         <!-- Weighted Graph Algorithm-->
-        <section class="main-section"></section>
-        
+        <section class="main-section">
+            <header id="Weighted_Graph_Algorithm" class="">Weighted Graph Algorithm</header>
+            <div class="contents">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </section>
+
         <!-- Combanitorial Search-->
-        <section class="main-section"></section>
+        <section class="main-section">
+            <header id="Weighted_Graph_Algorithm" class="">Weighted Graph Algorithm</header>
+            <div class="contents">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </section>
 
         <!-- Heuristic Methods -->
-        <section class="main-section"></section>
+        <section class="main-section">
+            <header id="Weighted_Graph_Algorithm" class="">Weighted Graph Algorithm</header>
+            <div class="contents">
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </section>
 
         <!-- Dynamic Programming section -->
-        <section class="main-section"></section>
+        <section class="main-section">
+            <header id="Weighted_Graph_Algorithm" class="">Weighted Graph Algorithm</header>
+            <div class="contents">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere delectus vitae veniam, error
+                    dignissimos quidem reiciendis culpa nam necessitatibus ipsa cupiditate voluptates quas rem officiis
+                    soluta hic aperiam vero distinctio?</p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+                <p></p>
+            </div>
+        </section>
 
         <!-- Intractable prolems and Approxiamation Algorithm -->
     </main>
